# RTNeural-example

./: .gitmodules  CMakeLists.txt  README.md  neural_net.py
.github/workflows/: cmake.yml
plugin/: Plugin.cpp  Plugin.h
